# Copyright (c) 2026 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust.gni")

template("reload_autoconf_and_build") {
  pass = "${target_name}_pass"
  app_name = "${target_name}"
  build_rust(pass) {
    forward_variables_from(invoker,
                           "*",
                           [
                             "inputs",
                             "kconfig_path",
                             "autoconf_path",
                             "app_conf",
                           ])
    output_name = "${app_name}"
  }

  action(app_name) {
    script = "//build/scripts/reload_autoconf_and_build.py"
    pool = "//:console($default_toolchain)"
    inputs = invoker.inputs
    outputs = [ "${target_gen_dir}/${app_name}.stamp" ]
    args = [
      "--board",
      "${board}",
      "--kconfig",
      rebase_path(invoker.kconfig_path),
      "--autoconf",
      rebase_path(invoker.autoconf_path),
      "-C",
      rebase_path("${root_build_dir}"),
    ]

    if (defined(invoker.app_conf)) {
      args += [ "--app_conf" ]
      args += [ rebase_path(invoker.app_conf) ]
    }
    args += [ "${pass}" ]
    deps = [ "//kernel/kconfig:generate_autoconf" ]
  }
}
