# Copyright (c) 2026 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust.gni")

template("reload_autoconf_and_build") {
  pass = "${target_name}_pass"
  app_name = "${target_name}"

  build_rust(pass) {
    forward_variables_from(invoker,
                           "*",
                           [
                             "app_conf",
                             "configs",
                           ])
    configs += invoker.configs
  }

  action(app_name) {
    script = "//build/scripts/reload_autoconf_and_build.py"
    pool = "//:console($default_toolchain)"
    inputs = [ "${root_gen_dir}/.config" ]
    inputs += invoker.app_conf
    defconfig_list = []
    foreach(defconfig, inputs) {
      defconfig_list += [ rebase_path(defconfig) ]
    }
    defconfig_files = string_join(",", defconfig_list)
    outputs = [
      "${root_build_dir}/bin/${app_name}",
      "${root_build_dir}/bin/${app_name}.bin",
      "${root_build_dir}/${app_name}.stamp",
    ]
    args = [
      "--defconfig_files",
      defconfig_files,
      "--board",
      "${board}",
      "--build_type",
      "${build_type}",
      "--ninja_dir",
      rebase_path("${target_gen_dir}"),
      "--output_dir",
      rebase_path("${root_build_dir}/bin"),
      "${pass}",
    ]
    deps = [ "//kernel/kconfig:generate_autoconf" ]
  }
}
