# Copyright (c) 2026 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

template("set_configuration_files") {
  cfg_name = "${target_name}"
  action("${cfg_name}") {
    script = "//kernel/kconfig/src/generate_artifacts.py"
    inputs = invoker.inputs
    if (defined(invoker.app_conf)) {
      inputs += [ invoker.app_conf ]
    }
    outputs = [
      "${root_gen_dir}/autoconf.h",
      "${root_gen_dir}/.config",
    ]
    args = [
      "--kconfig",
      rebase_path(invoker.kconfig_path),
      "--board",
      "${board}",
      "--build_type",
      "${build_type}",
      "--target_name",
      "${cfg_name}",
      "--output_dir",
      rebase_path("${root_gen_dir}"),
    ]
    if (defined(invoker.app_conf)) {
      args += [ "--app_conf" ]
      args += [ rebase_path(invoker.app_conf) ]
    }
  }
}