# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("tests") {
  testonly = true
  deps = [
    "test_c_dylib:foo",
    "test_c_exe:foo",
    "test_c_staticlib:foo",
    "test_rust_bin_link_cxx_staticlib:foo",
    "test_rust_bin_link_rlib:foo",
    "test_rust_dylib:foo",

    # Link rust bin against a rust staticlib is tricky.
    # We don't show a demo here.
  ]
}
