# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("default") {
  deps = [ "//build/boards/${board}:default" ]
}

group("check_all") {
  testonly = true
  deps = [ "//build/boards/${board}:check_all" ]
}

# Collect all coverage reports and merge them.
if (coverage) {
  group("check_coverage") {
    testonly = true
    deps = [ ":merge_coverage_reports" ]
  }

  action("merge_coverage_reports") {
    testonly = true
    deps = [ ":check_all" ]
    script = "//build/scripts/merge_coverage_reports.py"
    args = [
      "-b",
      rebase_path("${root_out_dir}/bin"),
      "-d",
      rebase_path("${root_out_dir}/test"),
      "-o",
      rebase_path("${root_out_dir}/cov_report"),
    ]
    outputs = [ "${target_gen_dir}/${target_name}/dummy" ]
  }
}

group("run_gnrt") {
  deps = [ "//external/gnrt:gen_gnrt" ]
}
